# Safety_Sigma_Main_repo

./: .coverage  .gitignore  AUDIT.md  Makefile  PILOT_READINESS_SUMMARY.md  README.md  STAGE_0_VALIDATION.md  STAGE_1_VALIDATION.md  TESTING.md  atlas_analysis_report_clean.html  pyproject.toml  test_data.csv
.github/: CODEOWNERS  pull_request_template.md
Safety-Sigma-Docs/: .gitignore  IR_schema.md  TESTING.md  _manifest.authority.json  _prompt_wrapper.txt
Safety_Sigma_Main_repo/: README.md
advisory/: narrative_advisory.html  narrative_sample_populated.html
agentic/: audit.log.jsonl
agents/: agent_processor.py  base_agent.py  enhanced_agent.py  simple_agent.py  source_driven_agent.py
analyst_deliverables/: demo_report.html
artifacts/: backtest_results.json  demo_report.html  demo_report_v04.html  demo_report_v05.html  demo_report_v08.html  demo_report_v09.html  demo_report_v09b.html  demo_report_v10_pilot.html  demo_rules.json  junit_audit.xml  junit_golden.xml  junit_unit.xml  pilot_test_report.json  test_behavioral_rules.json  test_rules_with_regex.json
atlas_analysis_output_20250829_093315/: atlas_comprehensive_analysis_report.md
atlas_analysis_output_20250829_093453/: atlas_enhanced_rules.yaml  atlas_tool_execution_log.md
audit_logs/: agent_decision_3598d1fa-b86a-4366-b8d1-145c42d9f00c.json  agent_decision_3c8d0eaa-3d64-43f8-ba86-2ffcb94bf773.json  agent_decision_40d5ee63-4aa1-4fc7-8ec5-7cbf60f61a28.json  agent_decision_486c4c70-8911-4b1c-aee8-e1020cbd6d46.json  agent_decision_51f67edc-80d5-4d79-9b93-25db1a267a46.json  audit_2025-08-28.jsonl  (+41 more)
(+354 files in other folders)
