[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-sigma-2.0"
version = "2.0.0"
description = "Safety Sigma 2.0 - Advanced threat intelligence detection system"
authors = [
    {name = "Safety Sigma Team", email = "safety-sigma@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "PyPDF2>=3.0.0",
    "openai>=1.3.0", 
    "anthropic>=0.7.0",
    "pathlib2>=2.3.7",
    "markdown>=3.4.0",
    "weasyprint>=59.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
safety-sigma = "safety_sigma.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["safety_sigma*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true